# IIS

./: .dvcignore  .gitignore  Dockerfile  README.md  data.dvc  data_GE.ipynb  mlf.py  mlflow.py  package-lock.json  processed.dvc  pyproject.toml  requirements.txt  test_.py  zzz.py
.dvc/: config
.github/workflows/: test.yaml
data/processed/: data_air.csv  merged.csv  processed  processed_air  processed_traffic  processed_weather  test.csv  train.csv
data/raw/: forecast  promet.csv
env1/: pyproject.toml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  new_ge.json  run_my_checkpoint.py
mlruns/0/: meta.yaml
mlruns/141960380790026168/: meta.yaml
mlruns/141960380790026168/7964dadc3e71490aaf399352933c218b/: meta.yaml
models/: linear  train_model  train_model.joblib
notebooks/: data.ipynb  model.ipynb
notebooks/.ipynb_checkpoints/: data-checkpoint.ipynb  model-checkpoint.ipynb
notebooks/data/processed/: data_koncni.csv
notebooks/data/raw/: forecast  weather
reports/: data_drift.html  metrics.txt  metrics_evs.txt  metrics_mae.txt  metrics_mse.txt  train_metrics.txt
src/: main.py  test_.py
src/client/: back-end.js  front-end.html  gui-py.py  package-lock.json
src/data/: fetch_data.py  fetch_weather_data.py  get_forecast.py  merge_processed_data.py  preprocess_air_data.py  preprocess_weather_data.py
src/data/data/processed/: data_forecast.csv  (+1 more)
src/models/: model.sav  predict_model.py
src/serve/: server.py
test/: test_.py
(+14 files in other folders)
