[tool.poetry]
name = "iis-nal1"
version = "1.0.0"
description = ""
authors = ["Lara Rantuša"]
readme = "README.md"
packages = [{include = "iis_nal1"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.5"
pandas = "^1.5.3"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.1"
flask = "^2.2.3"
great-expectations = "^0.16.3"
evidently = "^0.2.7"
llvmlite = "^0.39.1"
numba = "^0.56.4"
mlflow = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
